[gd_scene format=3 uid="uid://23ldqrlrursk"]

[ext_resource type="Script" uid="uid://bd8khf7ltrb7o" path="res://Frameworks(YourStuff)/Kevin/FinishHim/scenes/game.gd" id="1_uwrxv"]
[ext_resource type="Script" uid="uid://23y806ndy068" path="res://Frameworks(YourStuff)/Kevin/FinishHim/scenes/key_holder.gd" id="2_yqjtg"]
[ext_resource type="Texture2D" uid="uid://dpk8g226k74qi" path="res://Frameworks(YourStuff)/Kevin/FinishHim/assets/i_dont_wanna_use_canvas_modulate.png" id="3_iywne"]
[ext_resource type="PackedScene" uid="uid://xx6as51jwkk0" path="res://Frameworks(YourStuff)/Kevin/FinishHim/objects/good_kevin.tscn" id="3_lbhrr"]
[ext_resource type="PackedScene" uid="uid://dsmv0hrfm7k3g" path="res://Frameworks(YourStuff)/Kevin/FinishHim/objects/evil_kevin.tscn" id="3_lnu2h"]
[ext_resource type="Texture2D" uid="uid://cpsrmd7784j3r" path="res://Frameworks(YourStuff)/Kevin/FinishHim/assets/background.png" id="4_gee14"]
[ext_resource type="PackedScene" uid="uid://c2v6uks8wg5de" path="res://Frameworks(YourStuff)/Kevin/FinishHim/objects/timekeeper_digit.tscn" id="6_p57ef"]
[ext_resource type="PackedScene" uid="uid://dkhu0lnl3rpa2" path="res://Frameworks(YourStuff)/Kevin/FinishHim/objects/health_bar.tscn" id="7_u5sy4"]
[ext_resource type="PackedScene" uid="uid://b18n6wpecrxaw" path="res://Frameworks(YourStuff)/Kevin/FinishHim/objects/finish_him.tscn" id="9_0tnpc"]
[ext_resource type="AudioStream" uid="uid://b5pbrvvgcp0lk" path="res://Frameworks(YourStuff)/Kevin/FinishHim/audio/music.wav" id="10_vtaks"]

[sub_resource type="Animation" id="Animation_yqjtg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_trtic"]
resource_name = "big_shake"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(8, 0), Vector2(-8, 0), Vector2(6, 0), Vector2(-6, 0), Vector2(4, 0), Vector2(-4, 0), Vector2(2, 0), Vector2(-2, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_u5sy4"]
resource_name = "bomb"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 16), Vector2(0, -16), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_kvpfn"]
resource_name = "ghoulish_party"
length = 0.1
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 3), Vector2(0, -3), Vector2(0, 3)]
}

[sub_resource type="Animation" id="Animation_kvuet"]
resource_name = "little_shake"
length = 0.1
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2, 0), Vector2(-2, 0), Vector2(2, 0)]
}

[sub_resource type="Animation" id="Animation_lnu2h"]
resource_name = "tiny_shake_finish_him_down"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 4), Vector2(0, -4), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_0tnpc"]
resource_name = "tiny_shake_finish_him_left"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-4, 0), Vector2(4, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_vtaks"]
resource_name = "tiny_shake_finish_him_right"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(4, 0), Vector2(-4, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_gee14"]
resource_name = "tiny_shake_finish_him_up"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -4), Vector2(0, 4), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_dinhu"]
resource_name = "winter_wonderland"
length = 0.1
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 1), Vector2(0, -1), Vector2(0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lbhrr"]
_data = {
&"RESET": SubResource("Animation_yqjtg"),
&"big_shake": SubResource("Animation_trtic"),
&"bomb": SubResource("Animation_u5sy4"),
&"ghoulish_party": SubResource("Animation_kvpfn"),
&"little_shake": SubResource("Animation_kvuet"),
&"tiny_shake_finish_him_down": SubResource("Animation_lnu2h"),
&"tiny_shake_finish_him_left": SubResource("Animation_0tnpc"),
&"tiny_shake_finish_him_right": SubResource("Animation_vtaks"),
&"tiny_shake_finish_him_up": SubResource("Animation_gee14"),
&"winter_wonderland": SubResource("Animation_dinhu")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uwrxv"]
size = Vector2(600, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yqjtg"]
size = Vector2(4000, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p57ef"]
size = Vector2(80, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u5sy4"]
size = Vector2(80, 8)

[sub_resource type="Animation" id="Animation_lbhrr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_iywne"]
resource_name = "darken"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.49803922)]
}

[sub_resource type="Animation" id="Animation_p57ef"]
resource_name = "start"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u5sy4"]
_data = {
&"RESET": SubResource("Animation_lbhrr"),
&"darken": SubResource("Animation_iywne"),
&"start": SubResource("Animation_p57ef")
}

[node name="Game" type="Node2D" unique_id=871968955]
process_mode = 4
script = ExtResource("1_uwrxv")

[node name="Camera2D" type="Camera2D" parent="." unique_id=458894087]
zoom = Vector2(2, 2)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera2D" unique_id=1373453464]
libraries/ = SubResource("AnimationLibrary_lbhrr")

[node name="THE FLOOR" type="StaticBody2D" parent="." unique_id=1515397770]
editor_description = "The hit TV show coming to a streaming service near you!"
position = Vector2(0, 192)
collision_layer = 21

[node name="CollisionShape2D" type="CollisionShape2D" parent="THE FLOOR" unique_id=729409272]
position = Vector2(0, -40)
shape = SubResource("RectangleShape2D_uwrxv")

[node name="Key Holder" type="StaticBody2D" parent="." unique_id=1150089556]
position = Vector2(0, -48)
collision_layer = 2
collision_mask = 2
script = ExtResource("2_yqjtg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Key Holder" unique_id=1409896857]
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_yqjtg")

[node name="Time Holder" type="StaticBody2D" parent="." unique_id=40778554]
position = Vector2(0, -88)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Time Holder" unique_id=351327880]
shape = SubResource("RectangleShape2D_p57ef")

[node name="Health Holder 1" type="StaticBody2D" parent="." unique_id=849439156]
position = Vector2(-150, 0)
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Health Holder 1" unique_id=120855721]
position = Vector2(0, -88)
shape = SubResource("RectangleShape2D_u5sy4")
debug_color = Color(0.6826832, 0.45925534, 0.5537497, 0.41960785)

[node name="Health Holder 2" type="StaticBody2D" parent="." unique_id=940097920]
position = Vector2(150, 0)
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Health Holder 2" unique_id=525837435]
position = Vector2(0, -88)
shape = SubResource("RectangleShape2D_u5sy4")
debug_color = Color(0.6826832, 0.45925534, 0.5537497, 0.41960785)

[node name="Background Darkener" type="Sprite2D" parent="." unique_id=197590992]
editor_description = "Literally only exists for that klassic screen darkening."
visible = false
z_index = -1
scale = Vector2(600, 600)
texture = ExtResource("3_iywne")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background Darkener" unique_id=1804936368]
libraries/ = SubResource("AnimationLibrary_u5sy4")

[node name="Background" type="Sprite2D" parent="." unique_id=717327727]
z_index = -10
texture_filter = 1
texture = ExtResource("4_gee14")

[node name="Good Kevin" parent="." unique_id=1739136560 instance=ExtResource("3_lbhrr")]
position = Vector2(-208, -265)

[node name="Evil Kevin" parent="." unique_id=855642725 instance=ExtResource("3_lnu2h")]
position = Vector2(208, -265)

[node name="Digit 1" parent="." unique_id=731773443 instance=ExtResource("6_p57ef")]
position = Vector2(-20, -200)

[node name="Digit 2" parent="." unique_id=600093132 instance=ExtResource("6_p57ef")]
position = Vector2(20, -200)

[node name="Health Bar" parent="." unique_id=289433643 instance=ExtResource("7_u5sy4")]
position = Vector2(-152, -384)

[node name="Health Bar 2" parent="." unique_id=18504151 instance=ExtResource("7_u5sy4")]
position = Vector2(152, -384)
evil = true

[node name="Finish Him" parent="." unique_id=1432893557 instance=ExtResource("9_0tnpc")]
position = Vector2(0, -8)

[node name="Move On Timer" type="Timer" parent="." unique_id=663208155]
editor_description = "Once time elapses, game is over and moves on to next game."
wait_time = 2.0
one_shot = true

[node name="Digital Timer Update Timer" type="Timer" parent="." unique_id=1877977908]
wait_time = 0.5

[node name="Fatality Timer" type="Timer" parent="." unique_id=727898826]
wait_time = 0.1

[node name="Music" type="AudioStreamPlayer" parent="." unique_id=1512215134]
stream = ExtResource("10_vtaks")
volume_db = -5.0

[connection signal="timeout" from="Move On Timer" to="." method="_on_move_on_timer_timeout"]
[connection signal="timeout" from="Digital Timer Update Timer" to="." method="_on_digital_timer_update_timer_timeout"]
[connection signal="timeout" from="Fatality Timer" to="." method="_on_fatality_timer_timeout"]
